--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,15 @@
 
 
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
 
-    <!-- <title>Ruby on Rails Tutorial Sample App | Home</title> -->
-    <!-- <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title> -->
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
 
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
